<resources>
    <string name="app_name">Nano Degree App</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="filmes_populares">Filmes populares</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="fa_a_o_maior">Faça-o maior</string>
    <string name="fa_a_seu_aplicativo_com_material">Faça seu aplicativo com Material</string>
    <string name="seja_onipresente">Seja onipresente</string>
    <string name="capstone">Capstone</string>
</resources>
