<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.saulo.nanodegree.nanodegreeapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="23sp"
        android:textColor="@color/primaryText"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/filmes_populares"
            android:padding="20dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextIcons"
            android:elevation="6dp" />
        <Button
            android:id="@+id/btn2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/stock_hawk"
            android:padding="20dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextIcons"
            android:layout_marginTop="8dp"
            android:elevation="6dp"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/fa_a_o_maior"
            android:padding="20dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextIcons"
            android:layout_marginTop="8dp"
            android:elevation="6dp"/>
        <Button
            android:id="@+id/btn4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/fa_a_seu_aplicativo_com_material"
            android:padding="20dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextIcons"
            android:layout_marginTop="8dp"
            android:elevation="6dp"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/seja_onipresente"
            android:padding="20dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextIcons"
            android:layout_marginTop="8dp"
            android:elevation="6dp"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:padding="20dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextIcons"
            android:layout_marginTop="8dp"
            android:elevation="6dp"/>
    </LinearLayout>
</LinearLayout>
